<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/background_image"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:id="@+id/imageView2" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="@+id/imageView4"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/app_logo" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:fontFamily="@font/montserrat"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white" android:textSize="18sp"/>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            android:fontFamily="@font/montserrat" android:background="@drawable/swoosh_button"
            android:textColor="@android:color/white"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton6" android:layout_weight="1"
                android:textOff="@string/begginer" android:textOn="@string/begginer" android:text="@string/begginer"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white"
                android:layout_marginStart="16dpo"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:textOff="@string/baller" android:textOn="@string/baller" android:id="@+id/toggleButton7"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:layout_marginStart="16dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>